<resources>
    <string name="app_name">ID Ativos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act__cadastro">CADASTRO</string>
    <string name="action_cadastro">CADASTRO</string>
    <string name="title_activity_act_inventario">INVENTÁRIO</string>
    <string name="txt_rfid">txtrfid</string>
    <string name="title_activity_act__cadastro_dados">CADASTRO</string>
    <string name="digite_o_trace_number">Digite o Trace Number</string>
    <string name="digite_o_volume">Digite o Volume</string>
    <string name="digite_o_ngulo_da_manilha">Digite o Ângulo da Manilha</string>
    <string name="flagatualizar">FlagAtualizar</string>
    <string name="action_inventario">INVENTÁRIO</string>
    <string name="title_activity_act__inventario">Inventário</string>
    <string name="txtProcesso">Processo</string>
    <string name="txtPosicao">Posição</string>
    <string name="txtPosicao_Original">Posição Original</string>
    <string name="txtAlmoxarifado">Almoxarifado</string>
    <string name="txtAlmoxarifado_original">Almoxarifado Original</string>
    <string name="inventarioAtualizar">SALVAR</string>
    <string name="inventarioPlan">INV. PLANEJADO</string>
    <string name="inventario_limpar">LIMPAR</string>
    <string name="tv_inventario_count">TOTAL ENCONTRADO:</string>
    <string name="tv_inventario_qtd" />
    <string name="rb_inventario_equipamento">EQUIPAMENTO</string>
    <string name="rd_inventario_material">MATERIAL</string>
    <string name="tv_cadastro_posicao">Posição</string>
    <string name="tv_cadastro_categoria">Categoria</string>
    <string name="tv_cadsatro_quantidade" />
    <string name="title_activity_processos_os">PROCESSOS O.S.</string>
    <string name="title_activity_processos_adicionar">ADICIONAR PROCESSO</string>
    <string name="title_activity_processos_ativos">PROCESSOS ATIVOS</string>
    <string name="title_activity_novo_processo">EXECUÇÃO DE TAREFA</string>
    <string name="title_activity_act__tracking">TRACKING</string>
    <string name="title_activity_settings">CONFIGURAÇÕES</string>
    <string name="btn_tracking_addItem">ADICIONAR</string>
    <string name="tracking">TRACKING</string>
    <string name="invent_rio">INVENTÁRIO</string>
    <string name="sync">SINCRONIZAR</string>
    <string name="lv_tracking">Tracking</string>
    <string name="inventarioAtualizarTracking">SALVAR</string>
    <string name="edt_nLoteTracking">Nº Lote</string>
    <string name="title_activity_act__tag_id__nao__cadastrado">TAGID NÃO CADASTRADO</string>
    <string name="action_main_sair">SAIR</string>
    <string name="title_activity_main2">ID ATIVOS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_act_consulta_material">act_consulta_material</string>
    <string name="title_activity_act_imagem_material">Act_imagem_material</string>
    <string name="title_activity_act__imagem">Act_Imagem</string>
    <string name="title_activity_act__inventario__planejado">Act_Inventario_Planejado</string>
    <string name="numero_versao_apk">2.2.1.06</string>
    <string name="modelo_leitor_default">Vanch_VH75</string>
</resources>
