<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_act__cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.marcosmilitao.idativosandroid.Act_Cadastro"

    android:baselineAligned="false"
    android:orientation="vertical">

    <TextView
        android:text="@string/tv_cadastro_posicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cadastro_posicao" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3" />

    <TextView
        android:text="@string/tv_cadastro_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cadastro_categoria" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_cadastro_categoria"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etv_cadastro_quantidade"
        android:hint="Entre com a Quantidade"
        android:text="@string/tv_cadsatro_quantidade"
        tools:ignore="HardcodedText" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lv_cadastro"/>


</LinearLayout>
